[gd_scene load_steps=2 format=3 uid="uid://bu310pjagygfn"]

[ext_resource type="Script" path="res://scripts/hall.gd" id="1_0yioo"]

[node name="Hall" type="Area3D"]
script = ExtResource("1_0yioo")

[node name="Pos1" type="Marker3D" parent="."]

[node name="Pos2" type="Marker3D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
